Agregar validaciones campos y mostrar foto